--- a/Bilinguals/Views/Shared/_LoginPartial.cshtml
+++ b/Bilinguals/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,7 @@
 
         <ul class="nav navbar-nav">
             <li class="nav-item">
-                @Html.ActionLink("Xin chào " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage", @class = "nav-link" })
+                @Html.ActionLink(User.Identity.GetUserName(), "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage", @class = "nav-link" })
             </li>
             <li class="nav-item"><a class="nav-link" href="javascript:document.getElementById('logoutForm').submit()">Đăng xuất</a></li>
         </ul>
