--- a/Bilinguals/Views/Sentences/Edit.cshtml
+++ b/Bilinguals/Views/Sentences/Edit.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    var returnUrl = Request.QueryString["returnUrl"];
 }
 
 <h2>Edit</h2>
@@ -17,6 +18,7 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
+        @Html.HiddenFor(model => model.DateCreated)
 
         <div class="form-group">
             @Html.LabelFor(model => model.EnText, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -51,14 +53,6 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.DateCreated, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DateCreated, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DateCreated, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
             @Html.LabelFor(model => model.DateModified, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.DateModified, new { htmlAttributes = new { @class = "form-control" } })
@@ -69,14 +63,20 @@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-default" />
+
+                @if (returnUrl == null)
+                {
+                    @Html.ActionLink("Back", "Index", null, new { @class = "btn btn-default" })
+                }
+                else
+                {
+                    <a href="@returnUrl" class="btn btn-default">Back</a>
+                }
+
             </div>
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
