--- a/Bilinguals/Views/Sentences/Index.cshtml
+++ b/Bilinguals/Views/Sentences/Index.cshtml
@@ -1,64 +1,88 @@
-﻿@model IEnumerable<Bilinguals.Domain.Models.Sentence>
+﻿@model PagedList.IPagedList<Bilinguals.Domain.Models.Sentence>
+@using PagedList.Mvc;
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Tất cả câu hội thoại";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    var searchText = Request.QueryString["searchText"];
 }
 
 <h2>Index</h2>
-
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Dialog.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.EnText)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ViText)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SortOrder)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DateCreated)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DateModified)
-        </th>
-        <th></th>
-    </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Dialog.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.EnText)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ViText)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.SortOrder)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DateCreated)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DateModified)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
+<p>
+    @Html.ActionLink("Theo dateCreate", "Index", new { sortOrder = "DateCreate", searchText = searchText })
+</p>
+
+<form>
+    <div class="input-group" style="width: 350px; float: right">
+        <input style="border-radius: 10px 0 0 10px" type="text" class="form-control" id="searchText" name="searchText" value="@searchText" placeholder="Nhập câu hội thoại">
+        <button id="btnsearch" style="border-radius: 0 10px 10px 0" class="btn btn-outline-primary"><i class="bi bi-search"></i></button>
+    </div>
+</form>
+
+
+@if (Model.Count > 0)
+{
+    <table class="table">
+        <tr>
+            <th>
+                Name Dialog
+            </th>
+            <th>
+                EnText
+            </th>
+            <th>
+                ViText
+            </th>
+            <th>
+                SortOrder
+            </th>
+            <th>
+                DateCreated
+            </th>
+            <th>
+                DateModified
+            </th>
+            <th></th>
+        </tr>
+
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Dialog.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.EnText)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ViText)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.SortOrder)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DateCreated)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DateModified)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                </td>
+            </tr>
+        }
+    </table>
+
+    <div id="paging" style="text-align: center">
+        Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+        @Html.PagedListPager(Model, pageIndex => Url.Action("Index", new { pageIndex, searchText = searchText }))
+    </div>
 }
 
-</table>
+
