--- a/Bilinguals/Views/Dialogs/Index.cshtml
+++ b/Bilinguals/Views/Dialogs/Index.cshtml
@@ -1,8 +1,10 @@
-﻿@model IEnumerable<Bilinguals.Domain.Models.Dialog>
+﻿@model PagedList.IPagedList<Bilinguals.Domain.Models.Dialog>
+@using PagedList.Mvc;
 
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    //Layout = "~/Views/Shared/_Layout.cshtml";
+    var searchText = Request.QueryString["searchText"];
 }
 
 <h2>Index</h2>
@@ -10,37 +12,56 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DateCreated)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DateModified)
-        </th>
-        <th></th>
-    </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DateCreated)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DateModified)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
+<form>
+    <div class="input-group" style="width: 350px; float: right">
+        <input style="border-radius: 10px 0 0 10px" type="text" class="form-control" id="searchText" name="searchText" value="@searchText" placeholder="Nhập câu hội thoại">
+        <button id="btnsearch" style="border-radius: 0 10px 10px 0" class="btn btn-outline-primary"><i class="bi bi-search"></i></button>
+    </div>
+</form>
+
+@if (Model.Count > 0)
+{
+    <table class="table">
+        <tr>
+            <th>
+                Name
+            </th>
+            <th>
+                DateCreated
+            </th>
+            <th>
+                DateModified
+            </th>
+            <th></th>
+        </tr>
+
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DateCreated)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DateModified)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                </td>
+            </tr>
+        }
+
+    </table>
+
+    <div id="paging" style="text-align: center">
+        Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+        @Html.PagedListPager(Model, pageIndex => Url.Action("Index", new { pageIndex, searchText = searchText }))
+    </div>
 }
 
-</table>
+
