--- a/Bilinguals/Views/Shared/_Layout.cshtml
+++ b/Bilinguals/Views/Shared/_Layout.cshtml
@@ -21,8 +21,8 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">@Html.ActionLink("Trang học của tôi", "", "", null, new { @class = "nav-link" })</li>
-                    <li class="nav-item">@Html.ActionLink("Đoạn hội thoại", "", "", null, new { @class = "nav-link" })</li>
+                    <li class="nav-item">@Html.ActionLink("Trang học của tôi", "Index", "Learn", null, new { @class = "nav-link" })</li>
+                    <li class="nav-item">@Html.ActionLink("Đoạn hội thoại", "Index", "Dialogs", null, new { @class = "nav-link" })</li>
                     <li class="nav-item">@Html.ActionLink("Giới thiệu", "About", "Home", null, new { @class = "nav-link" })</li>
                     <li class="nav-item">
                         @if (User.IsInRole("Administrator"))
