--- a/Bilinguals/Views/Dialogs/Details.cshtml
+++ b/Bilinguals/Views/Dialogs/Details.cshtml
@@ -7,9 +7,9 @@
 
 <h2>Details</h2>
 
-<button id="edit_link" type="button" class="btn btn-warning btn-sm" data-bs-toggle="modal" data-bs-target="#bsModal">
+@*<button type="button" class="btn btn-warning btn-sm" data-bs-toggle="modal" data-bs-target="#bsModal">
     <span class="bi bi-pencil-square"></span>
-</button>
+</button>*@
 
 <div>
     <h4>Dialog</h4>
@@ -59,14 +59,13 @@
                     <span class="bi bi-@(!item.UserSentenceId.HasValue ? "bookmark-plus":"bookmark-check")"></span>
                 </button>
 
-                <div class="dropdown">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                        Dropdown button
+                <div class="btn-group dropstart">
+                    <button type="button" class="btn btn-outline-dark btn-sm dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                        <i class="bi bi-menu-button"></i>
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        <li><a href="#" class="dropdown-item" data-bs-toggle="modal" data-bs-target="#bsModal">Add to new list</a></li>
+                        <li><hr class="dropdown-divider"></li>
                     </ul>
                 </div>
 
@@ -116,8 +115,7 @@
             });
         });
 
-        //handle create group (promise calback)
-
+        // 
         var simplePromiseRequest = (url) => {
             return new Promise((resolve, reject) => {
                 $.ajax({
@@ -132,6 +130,32 @@
             });
         }
 
+        // get list groups 
+        var groupService = (function () {
+
+            var _resourceUrl = '/groups/getusergroups';
+            var getUserGroups = () => {
+                return simplePromiseRequest(_resourceUrl);
+            };
+
+            return { getUserGroups, }
+        })();
+
+        //json request group list
+        var getUserGroups = function() {
+            var _group = [];
+            groupService.getUserGroups().then((data) => {
+                _group = data;
+                var rows = _group.reduce((all, group) => {
+                    var groupRow = `<li class="gr" data-groupid="${group.id}"><a class="dropdown-item" href="#">${group.name}</a></li>`;
+                    return all += groupRow;
+                }, '');
+                $('.gr').remove();
+                $('.dropdown-menu').append(rows);
+            });
+        }
+
+        // handle create group (promise calback)
         var bsModal = (function () {
             var _completeCallback, _beforeShowCallback;
 
@@ -190,7 +214,9 @@
                 init: function () {
                     bsModal.init(() => { bsModal.setState() }, (newGroup) => {
                         //change ui dropdown
+                        getUserGroups();
                     });
+                    getUserGroups();
                 },
             }
         })();
@@ -198,7 +224,6 @@
         $(function () {
             Main.init();
         });
-
 
     </script>
 }
